Exercicio fix_start

--- a/mod-1/testes_google_exercice.ipynb
+++ b/mod-1/testes_google_exercice.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('te', 'es')"
+       "'c'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21,7 +21,12 @@
     "s = 'teste'\n",
     "s[:2], s[-2:]\n",
     "s = 'tes'\n",
-    "s[:2], s[-2:]"
+    "s[:2], s[-2:]\n",
+    "\n",
+    "#fix_start\n",
+    "s = 'compactacao'\n",
+    "start_char = s[0]\n",
+    "s[1:].replace(start_char, '*')"
    ]
   }
  ],
