--- a/mod-1/testes_google_exercice.ipynb
+++ b/mod-1/testes_google_exercice.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c'"
+       "('pox', 'mid')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,7 +26,14 @@
     "#fix_start\n",
     "s = 'compactacao'\n",
     "start_char = s[0]\n",
-    "s[1:].replace(start_char, '*')"
+    "start_char+s[1:].replace(start_char, '*')\n",
+    "\n",
+    "#mix_up\n",
+    "s1 = 'mix'\n",
+    "s2 = 'pod'\n",
+    "mix_s1 = s1[:2]\n",
+    "mix_s2 = s2[:2]\n",
+    "s1.replace(mix_s1, mix_s2), s2.replace(mix_s2, mix_s1)"
    ]
   }
  ],
