Exercicio math_ends

--- a/mod-1/testes_google_exercice.ipynb
+++ b/mod-1/testes_google_exercice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "('pox', 'mid')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,6 +35,28 @@
     "mix_s2 = s2[:2]\n",
     "s1.replace(mix_s1, mix_s2), s2.replace(mix_s2, mix_s1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('b', 'a')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#match_ends\n",
+    "s='bom dia'\n",
+    "s[0],s[-1]"
+   ]
   }
  ],
  "metadata": {
@@ -53,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
