--- a/mod-1/testes_google_exercice.ipynb
+++ b/mod-1/testes_google_exercice.ipynb
@@ -38,16 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('b', 'a')"
+       "['a', 'b', 'c']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,11 @@
    "source": [
     "#match_ends\n",
     "s='bom dia'\n",
-    "s[0],s[-1]"
+    "s[0],s[-1]\n",
+    "#front_x\n",
+    "list = ['a', 'c', 'b']\n",
+    "list.sort()\n",
+    "list"
    ]
   }
  ],
