Exercicio sort_last

--- a/mod-1/testes_google_exercice.ipynb
+++ b/mod-1/testes_google_exercice.ipynb
@@ -38,16 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['a', 'b', 'c']"
+       "[(6, 1), (3, 2), (1, 5)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,6 +59,11 @@
     "#front_x\n",
     "list = ['a', 'c', 'b']\n",
     "list.sort()\n",
+    "#sort_last\n",
+    "list = [(1, 5), (3, 2), (6, 1)]\n",
+    "def last_element(l):\n",
+    "    return l[-1]\n",
+    "list.sort(key=last_element)\n",
     "list"
    ]
   }
