--- a/mod-1/testes_google_exercice.ipynb
+++ b/mod-1/testes_google_exercice.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "[(6, 1), (3, 2), (1, 5)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,6 +65,30 @@
     "    return l[-1]\n",
     "list.sort(key=last_element)\n",
     "list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ing'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#verbing\n",
+    "s1 = 'cry'\n",
+    "s2 = 'testing'\n",
+    "s1 + 'ing'\n",
+    "s2[-3:] "
    ]
   }
  ],
