Exercicio not_bad

--- a/mod-1/testes_google_exercice.ipynb
+++ b/mod-1/testes_google_exercice.ipynb
@@ -88,7 +88,10 @@
     "s1 = 'cry'\n",
     "s2 = 'testing'\n",
     "s1 + 'ing'\n",
-    "s2[-3:] "
+    "s2[-3:] \n",
+    "#not_bad\n",
+    "import re\n",
+    "result = re.sub('not(.*?)bad', 'good', s)\n"
    ]
   }
  ],
