Exercicio front_back

--- a/mod-1/testes_google_exercice.ipynb
+++ b/mod-1/testes_google_exercice.ipynb
@@ -69,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ing'"
+       "(3, 2)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,18 @@
     "s2[-3:] \n",
     "#not_bad\n",
     "import re\n",
-    "result = re.sub('not(.*?)bad', 'good', s)\n"
+    "s = 'This dinner is not that bad!'\n",
+    "result = re.sub('not(.*?)bad', 'good', s)\n",
+    "result\n",
+    "#front_back\n",
+    "s = 'abcde'\n",
+    "s_size = len(s)\n",
+    "x = ''\n",
+    "begin = int(s_size/2) + (s_size % 2)\n",
+    "end = int(s_size/2)\n",
+    "#if (s_size % 2) == 0:\n",
+    "#    x = s[:int(s_size/2)], s\n",
+    "begin, end"
    ]
   }
  ],
