Exercicio mimic_dict

--- a/mod-1/testes_google_exercice.ipynb
+++ b/mod-1/testes_google_exercice.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "(3, 2)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,6 +103,45 @@
     "#if (s_size % 2) == 0:\n",
     "#    x = s[:int(s_size/2)], s\n",
     "begin, end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 2, 3, 3, 4]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#linear merge\n",
+    "list1 = [1, 2, 3]\n",
+    "list2 = [1, 2, 3, 4]\n",
+    "result = (list1 + list2)\n",
+    "result. sort()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mimic_dict\n",
+    "def split_file(file):\n",
+    "    result = open(file, 'r')\n",
+    "    return result.read().split()\n",
+    "split_file('small.txt')\n",
+    "enumerate?"
    ]
   }
  ],
