Exercicio print_mimic

--- a/mod-1/testes_google_exercice.ipynb
+++ b/mod-1/testes_google_exercice.ipynb
@@ -132,16 +132,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['abc']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#mimic_dict\n",
     "def split_file(file):\n",
     "    result = open(file, 'r')\n",
     "    return result.read().split()\n",
     "split_file('small.txt')\n",
-    "enumerate?"
+    "d = {}\n",
+    "d['a'] = ['abc']\n",
+    "d['b'] = ['zcv']\n",
+    "d.get('a')"
    ]
   }
  ],
