--- a/mod-1/testes_google_exercice.ipynb
+++ b/mod-1/testes_google_exercice.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "['abc']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,6 +156,26 @@
     "d['a'] = ['abc']\n",
     "d['b'] = ['zcv']\n",
     "d.get('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '4', '5']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "s = '<td>1</td><td>2</td><td>3</td><td>4</td><td>5</td>'\n",
+    "result = re.findall('<td>(.*?)</td', s)\n",
+    "print(result)"
    ]
   }
  ],
